<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/popup_tile"
    android:id="@+id/popup_menu">

    <Button
        android:layout_width="40sp"
        android:layout_height="40sp"
        android:text="X"
        android:textSize="12sp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:id="@+id/close" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/close"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:id="@+id/tableLayout">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Name"
                android:id="@+id/popup_lock_name_title"
                android:singleLine="true"
                android:layout_column="0"
                android:layout_marginLeft="5dp" />

            <EditText
                android:text="Set this lock name automatically"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:textSize="12sp"
                android:inputType="text"
                android:layout_column="1"
                android:id="@+id/popup_lock_name"
                android:maxLength="20" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Location"
                android:singleLine="true"
                android:id="@+id/popup_lock_loc_title"
                android:layout_column="0"
                android:paddingRight="5dp"
                android:layout_marginLeft="5dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:text="Location Placeholder"
                android:id="@+id/popup_lock_loc"
                android:layout_column="1" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="ID"
                android:id="@+id/popup_id_title"
                android:layout_marginLeft="5dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="ID Placeholder"
                android:id="@+id/popup_id"
                android:singleLine="true" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        </TableRow>

    </TableLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="40sp"
        android:text="Unlink"
        android:id="@+id/unlink"
        android:layout_above="@+id/tableLayout"
        android:layout_alignParentStart="true" />

</RelativeLayout>