<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/lock_tile"
    android:layout_columnSpan="1"
    android:layout_rowSpan="1">

        <TextView
            android:id="@+id/lockLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:text="@string/lock_label"
            android:layout_gravity="center_horizontal"
            android:textStyle="bold"
            android:layout_margin="5dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="disconnected"
            android:id="@+id/connectedStatus"
            android:layout_gravity="center"
            android:layout_margin="5dp" />

        <RelativeLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal">

            <Switch
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/lockState"
                android:checked="false"
                android:layout_gravity="left"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_margin="5dp" />

            <Button
                style="?android:attr/buttonStyleSmall"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:id="@+id/popup_lock_menu_button"
                android:background="@drawable/gear"
                android:gravity="end"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_margin="5dp" />

        </RelativeLayout>
</LinearLayout>